<resources>
    <string name="app_name">FEAP</string>
    <string name="welcome_tv_str">Welcome to Fast Estimation of Acoustic Parameters</string>
    <string name="goBtnStr">GO!</string>

    <string name="goBtnTestStr">GO to test UI</string>



    <string name="info_str">Please give additional info</string>
    <string name="micPos">Mic position : </string>
    <string name="sourcePos">Source position :</string>
    <string name="dimension_str">Give Dimensions (width(x) - length(y) - height(z)) </string>

    <string name="samplingrate_str">Sampling Rate : </string>
    <string name="srDefault">44100</string>

    <string name="images_str">N of images : </string>
    <string name="imagesDefault">6</string>

    <string name="coef_str">Reflection coefs : -1..1 </string>
    <string name="coefDefault">0.3</string>
    <string name="calcIR_str">Calculate Impulse Response</string>

    <string name="c80_btn_str">Clarity C80</string>
    <string name="c80_result_str"> ---   </string>


    <string name="c50_btn_str">Clarity C50</string>
    <string name="c50_result_str"> ---   </string>

    <string name="edt_btn_str">Early Delay Time EDT</string>
    <string name="edt_extra_param_str"> Give t   </string>
    <string name="edt_result_str"> ---   </string>

    <string name="ct_btn_str">Centre Time (Ts)</string>
    <string name="ct_extra_param_str"> Give t   </string>
    <string name="ct_result_str"> ---   </string>

    <string name="strength_btn_str">Strength G</string>
    <string name="strength_extra_param_str"> Give t   </string>
    <string name="strength_result_str"> ---   </string>

    <string name="rt_btn_str">Reverberetion Time</string>
    <!--<string name="strength_extra_param_str"> Give t   </string>-->
    <string name="rt_result_str"> ---  </string>





    <string name="title_activity_boob2">boob2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>




    <string name="country_prompt">Choose a country</string>

    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string-array name="samplingRates">
        <item>44100</item>
        <item>32000</item>
        <item>22050</item>
        <item>11025</item>
        <item>8000</item>
    </string-array>



</resources>
